examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_tail.st
// ERROR_UNEXPECTED_LIST
language core;

extend with #lists;
extend with #type-ascriptions;

fn main(n : Nat) -> Bool {
    return List::tail([0] as [Nat])
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
